// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector: current plan should get current plan from billing 1`] = `
Object {
  "code": "qwe",
  "status": "private",
}
`;

exports[`Selector: deep linkable plans should return public and secret paid plans 1`] = `
Array [
  Object {
    "isFree": false,
    "status": "public",
  },
  Object {
    "status": "secret",
  },
]
`;

exports[`Selector: public plans should get public plans and sort by volume 1`] = `
Array [
  Object {
    "status": "public",
    "volume": 1,
  },
  Object {
    "status": "public",
    "volume": 2,
  },
  Object {
    "status": "public",
    "volume": 3,
  },
]
`;
